--- a/gtk/theme/Adwaita/gtk-contained-dark.css
+++ b/gtk/theme/Adwaita/gtk-contained-dark.css
@@ -2596,9 +2596,12 @@ tabs button.flat.image-button {
 tabs tab {
   min-width: 6em;
   padding: 13px;
-  border-right: 1px solid #1b1f20; }
+  border-right: 1px solid rgba(27, 31, 32, 0.5); }
+  tabs tab:first-child {
+    border-left: 1px solid rgba(27, 31, 32, 0.5); }
   tabs tab:checked {
-    border-bottom: 2px solid #215d9c; }
+    border-bottom: 2px solid #215d9c;
+    padding-bottom: 11px; }
 
 /**************
  * Scrollbars *
