--- a/gtk/theme/Adwaita/gtk-contained.css
+++ b/gtk/theme/Adwaita/gtk-contained.css
@@ -2609,9 +2609,12 @@ tabs button.flat.image-button {
 tabs tab {
   min-width: 6em;
   padding: 13px;
-  border-right: 1px solid #b6b6b3; }
+  border-right: 1px solid rgba(182, 182, 179, 0.5); }
+  tabs tab:first-child {
+    border-left: 1px solid rgba(182, 182, 179, 0.5); }
   tabs tab:checked {
-    border-bottom: 2px solid #4a90d9; }
+    border-bottom: 2px solid #4a90d9;
+    padding-bottom: 11px; }
 
 /**************
  * Scrollbars *
